# VOICE-BASED-TRAIN-TICKET-BOOKING-SYSTEM

./: .replit  README.md  app.py  app.py.bak  check_zip.py  create_zip.py  download.py  patch.txt  patch2.txt  pyproject.toml  replit.nix  stations.py  ticket_operations.py  voice_recognition.py
