[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "fpdf2>=2.8.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.0",
    "twilio>=9.5.1",
]
